--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <img src="coloroutspace.png" alt="A Cor que Caiu do Espaço">
     <h1> Me chamo João Gabriel, gosto de café, progamação, literatura e física. </h1>
-    <h2> Adoro frequentar cafés, principalmente o na <adress> R. Des. Ermelino de Leão, 170 </adress> chamado "Manana Café" </h2>
+    <h2> Adoro frequentar cafés </h2>
+    <p> principalmente o na <adress> R. Des. Ermelino de Leão, 170 </adress> chamado "Manana Café" </p>
   </body>
