--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
-    <title> João Gabriel Rodrigues da Silva n 17 </title>
+    <title> João Gabriel Rodrigues da Silva </title>
     <link rel="shortcut icon" href="button.png" type="image/x-icon">
   </head>
   <body>
     <img src="coloroutspace.png" alt="A Cor que Caiu do Espaço">
     <h1> Me chamo João Gabriel, gosto de café, progamação, literatura e física. </h1>
     <h2> Adoro frequentar cafés </h2>
-    <p> principalmente o na <adress> R. Des. Ermelino de Leão, 170 </adress> chamado "Manana Café" </p>
+    <p> principalmente o na <adress> <br>R. Des. Ermelino de Leão, 170 </adress> chamado "Manana Café" </p>
   </body>
