--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
     <img src="coloroutspace.png" alt="A Cor que Caiu do Espaço">
     <h1> Me chamo João Gabriel</h1>
     <h2> Gosto de café, progamação, literatura e física. E também adoro frequentar cafés </h2>
-    <p> principalmente o na <adress> <br>R. Des. Ermelino de Leão, 170 </adress> chamado "Manana Café" </p>
+    <p> principalmente o na <adress> R. Des. Ermelino de Leão, 170 </adress> chamado "Manana Café" </p>
   </body>
