--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <img src="coloroutspace.png" alt="A Cor que Caiu do Espaço">
     <h1> Me chamo João Gabriel</h1>
-    <h2> Gosto de café, progamação, literatura e física. E também adoro frequentar cafés </h2>
-    <p> principalmente o na <adress> R. Des. Ermelino de Leão, 170 </adress> chamado "Manana Café" </p>
+    <h2> Gosto de café, progamação, literatura e física. </h2>
+    <p> E também adoro frequentar cafés, principalmente o na <adress> R. Des. Ermelino de Leão, 170 </adress> chamado "Manana Café" </p>
   </body>
