--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <img src="coloroutspace.png" alt="A Cor que Caiu do Espaço">
-    <h1> Me chamo João Gabriel</h1>
-    <h2> Gosto de café, progamação, literatura e física. </h2>
-    <p> E também adoro frequentar cafés, principalmente o na <adress> R. Des. Ermelino de Leão, 170 </adress> chamado "Manana Café" </p>
+    <h1> Me chamo João Gabriel </h1>
+    <h2> Gosto de experimentar cafés, ver filmes antigos e estudar assuntos como física. </h2>
+    <p> Adoro frequentar cafés, principalmente o na <adress> R. Des. Ermelino de Leão, 170 </adress> chamado "Manana Café" </p>
   </body>
